# toolsbox

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  test.binn  test.py
module/: all.hpp  all_module.hpp
module/allocator/: allocator.hpp
module/base/: all.hpp  size.hpp  using.hpp
module/base/initialization/: high_precision_timer.hpp
module/base_code/: base16.hpp  base64.hpp
module/big_int/: big_int.cpp  big_int.hpp  big_int_test.cpp  big_int_test.hpp
module/containers/: big_int.hpp  int128.hpp  stack.hpp  vm.cpp  vm.hpp  vm_define.hpp
module/encoding/: base16.hpp  base64.hpp  xor_encryption.hpp
module/io/: log.hpp  out.hpp
module/random/: random.hpp
module/string/: conversion.hpp
module/thread/: data.hpp  lock.hpp  pool.hpp
module/thread/box/: box.hpp
module/thread/lock/: lock.hpp
module/time/: time.hpp
